creation des cartes dde sacs et des pages login et register

--- a/SUNUSHOP/src/index.html
+++ b/SUNUSHOP/src/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <app-root></app-root>
+  <app-home></app-home>
+  <app-register></app-register>
+  <app-produits></app-produits>
 </body>
 </html>
